Fix filter always visible + cards hover img

--- a/style.css
+++ b/style.css
@@ -407,9 +407,9 @@ section {
     transition: transform 0.4s ease;
 }
 
-.project__card:hover .project__img img {
+/* .project__card:hover .project__img img {
     transform: scale(1.1);
-}
+} */
 
 .project__content {
     padding: 2rem;
